--- a/package.json
+++ b/package.json
@@ -22,5 +22,8 @@
   "homepage": "https://github.com/liulinboyi/L-UI#readme",
   "dependencies": {
     "vue": "^2.6.8"
+  },
+  "devDependencies": {
+    "parcel": "^1.12.0"
   }
 }
