--- a/package.json
+++ b/package.json
@@ -21,9 +21,16 @@
   },
   "homepage": "https://github.com/liulinboyi/L-UI#readme",
   "dependencies": {
-    "vue": "^2.6.8"
+    "vue": "^2.6.8",
+    "vue-hot-reload-api": "^2.3.3"
   },
   "devDependencies": {
-    "parcel": "^1.12.0"
-  }
+    "@vue/component-compiler-utils": "^2.6.0",
+    "parcel": "^1.12.0",
+    "sass": "^1.17.2",
+    "vue-template-compiler": "^2.6.8"
+  },
+    "alias": {
+      "vue" : "./node_modules/vue/dist/vue.common.js"
+    }
 }
