--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start" : "parcel index.html --no-cache",
-    "dev-test": "parcel watch test/* --no-cache & karma start",
+    "dev-test": "parcel watch test/* --no-cache && karma start --single-run",
     "test": "parcel build test/* --no-cache --no-minify && karma start --single-run"
   },
   "repository": {
