--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "这是一个UI框架",
   "main": "index.js",
   "scripts": {
-    "start" : "parcel index.html --no-cache",
+    "start": "parcel index.html --no-cache",
     "dev-test": "parcel watch test/* --no-cache && karma start --single-run",
     "test": "parcel build test/* --no-cache --no-minify && karma start --single-run"
   },
@@ -23,6 +23,8 @@
   },
   "homepage": "https://github.com/liulinboyi/L-UI#readme",
   "dependencies": {
+    "ve": "^0.1.3",
+    "velocity-animate": "^1.5.2",
     "vue": "^2.6.8",
     "vue-hot-reload-api": "^2.3.3"
   },
