--- a/package.json
+++ b/package.json
@@ -23,12 +23,15 @@
   },
   "homepage": "https://github.com/liulinboyi/L-UI#readme",
   "dependencies": {
+    "chai-as-promised": "^7.1.1",
     "ve": "^0.1.3",
     "velocity-animate": "^1.5.2",
     "vue": "^2.6.8",
     "vue-hot-reload-api": "^2.3.3"
   },
   "devDependencies": {
+    "@babel/core": "^7.0.0-0",
+    "@babel/plugin-transform-runtime": "^7.4.4",
     "@vue/component-compiler-utils": "^2.6.0",
     "chai": "^4.2.0",
     "chai-spies": "^1.0.0",
