--- a/package.json
+++ b/package.json
@@ -1,12 +1,14 @@
 {
-  "name": "l-ui",
-  "version": "0.0.1",
-  "description": "这是一个UI框架",
+  "name": "@liulinboyi/l-ui",
+  "version": "0.0.2",
+  "description": "L UI",
   "main": "index.js",
   "scripts": {
     "start": "parcel index.html --no-cache",
     "dev-test": "parcel watch test/* --no-cache && karma start --single-run",
-    "test": "parcel build test/* --no-cache --no-minify && karma start --single-run"
+    "test": "parcel build test/* --no-cache --no-minify && karma start --single-run",
+    "docs:dev": "vuepress dev docs --temp .temp1",
+    "docs:build": "vuepress build docs --temp .temp2"
   },
   "repository": {
     "type": "git",
@@ -42,11 +44,14 @@
     "karma-mocha": "^1.3.0",
     "karma-sinon-chai": "^2.0.2",
     "mocha": "^6.1.4",
+    "node-sass": "^4.12.0",
     "parcel": "^1.12.0",
     "sass": "^1.17.2",
+    "sass-loader": "^7.1.0",
     "sinon": "^7.3.2",
     "sinon-chai": "^3.3.0",
-    "vue-template-compiler": "^2.6.8"
+    "vue-template-compiler": "^2.6.8",
+    "vuepress": "^1.0.0-alpha.48"
   },
   "alias": {
     "vue": "./node_modules/vue/dist/vue.common.js"
